--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Folders
 _obj
 _test
+Calaos Gateway
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -26,3 +27,4 @@ _testmain.go
 
 calaos-homekit
 
+config.dev.json
