--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
         "User": "demo@calaos.fr",
         "Password": "demo"
     },
-    "PinCode" : "63613161"
+    "PinCode": "63613161",
+    "BridgeName": "Calaos Gateway"
 }
